syntax = "proto3";
option java_package = "VireProtobuf.vire.cms";
option java_outer_classname = "ResourcePubsubFailureStub";
package vire.cms;

import "vire/utility/BasePayload.proto";
import "vire/utility/ModelIdentifier.proto";
import "vire/utility/InvalidContextError.proto";
import "vire/cms/InvalidResourceError.proto";
import "vire/cms/NoPubsubResourceError.proto";
import "vire/cms/InvalidStatusError.proto";

message ResourcePubsubFailure {

  vire.utility.BasePayload _base = 1;

  vire.utility.ModelIdentifier error_type_id = 100; // Error type identifier
  oneof error_oneof {
    vire.utility.InvalidContextError invalid_context    = 101; // Action is not applicable
    vire.cms.InvalidResourceError    invalid_resource   = 102; // Resource is not known
    vire.cms.NoPubsubResourceError   no_pubsub_resource = 103; // Resource is not eligible for Pub/Sub 
    vire.cms.InvalidStatusError      invalid_status     = 104; // Resource status is not valid for Pub/Sub (failure, missing) 
  }

}